[tool.poetry]
name = "airbnb-clone-backend"
version = "0.1.0"
description = "airbnb clone backend part using Django"
authors = ["woohoocheezy <woohoocheezy@gmail.com>"]
license = "woohoocheezy"
readme = "README.md"
packages = [{include = "airbnb_clone_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
